--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         // Här kan du lägga till JavaScript-kod om du vill
-        console.log("Hej från JavaScript!");
+        console.log("Hej ny ändring för commit JavaScript!");
     </script>
 </body>
 </html>
